--- a/src/main/frontend/src/styles/admin/branchForm.css
+++ b/src/main/frontend/src/styles/admin/branchForm.css
@@ -6,7 +6,7 @@
   padding: 20px;
 }
 
-.title {
+.branch_form_title {
   font-size: 28px; /* 글자 크기 증가 */
   font-weight: bold;
   margin-bottom: 30px; /* 여백 증가 */
