--- a/src/main/frontend/src/styles/branchBoardList.css
+++ b/src/main/frontend/src/styles/branchBoardList.css
@@ -1,5 +1,6 @@
 .branch-board-container {
     width: 100%;
+    height: 100%;
     max-width: var(--branch-board-width);
     margin: 0 auto;
     padding: 0px;
@@ -66,6 +67,43 @@
     height: 100%;
     object-fit: cover;
 }
+
+.branch-board-container .board_empty {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 50px;
+}
+
+.empty-posts-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.empty-posts-icon {
+    font-size: 24px;
+    color: var(--black-color);
+    margin-bottom: 10px;
+}   
+
+.empty-posts-message {
+    font-size: 21px;
+    color: var(--black-color);
+    font-weight: 300;
+}
+
+.empty-posts-submessage {
+    font-size: 14px;
+    color: var(--black-color);
+    font-weight: 600;
+}
+
 
 
 
