--- a/src/main/frontend/src/styles/admin/admin.css
+++ b/src/main/frontend/src/styles/admin/admin.css
@@ -73,5 +73,27 @@
 .admin_contents .pagination-container .pagination-button:hover { background-color: var(--point-color); color: var(--white-color); }
 .admin_contents .pagination-container .pagination-button.disabled { background-color: var(--gray-color); color: var(--white-color); }
 
+.admin_contents .branch-table-container { margin-top: 20px; padding: 34px; background-color: var(--white-color); border-radius: 20px; }
+.admin_contents .branch-table-container .branch-table { width: 100%; }
+.admin_contents .branch-table-container .branch-table thead tr { background-color: var(--white-color); }
+.admin_contents .branch-table-container .branch-table thead tr th { padding: 24px 5px 20px; vertical-align: middle; font-size: 14px; font-weight: 600; color: var(--black-color); text-align: left; }
+.admin_contents .branch-table-container .branch-table thead tr th { border-bottom: 1px solid #e0e0e0; }
+.admin_contents .branch-table-container .branch-table tbody tr { }
+.admin_contents .branch-table-container .branch-table tbody tr td { padding: 12px 5px; vertical-align: middle; font-size: 14px; font-weight: 400; color: var(--black-color); text-align: left; }
+.admin_contents .branch-table-container .branch-table tbody tr td { border-bottom: 1px solid #e0e0e0; }
+.admin_contents .branch-table-container .branch-table tbody tr td .info-controls { display: flex; justify-content: start; align-items: center; gap: 8px; }
+.admin_contents .branch-table-container .branch-table tbody tr td .info-controls .info-row { display: flex; justify-content: start; align-items: center; gap: 6px; }
+.admin_contents .branch-table-container .branch-table tbody tr td .info-controls .info-row select { width: 80px; border-radius: 10px; border: 1px solid #e0e0e0; padding: 5px; }
+.admin_contents .branch-table-container .branch-table tbody tr td .info-controls .info-row input { width: 60px;  border-radius: 10px; border: 1px solid #e0e0e0;  padding: 5px; }
+.admin_contents .branch-table-container .branch-table tbody tr td .branch-controls {  }
+.admin_contents .branch-table-container .branch-table tbody tr td .branch-controls .current-branches { display: flex; justify-content: start; align-items: center; gap: 6px; }
+.admin_contents .branch-table-container .branch-table tbody tr td .branch-controls .current-branches .branch-item { padding: 4px 10px; border-radius: 10px; background-color: var(--point-color); color: var(--white-color); }
+.admin_contents .branch-table-container .branch-table tbody tr td .branch-controls .add-branch-section { margin-top: 4px; display: flex; justify-content: start; align-items: center; gap: 6px; }
+.admin_contents .branch-table-container .branch-table tbody tr td .branch-controls .add-branch-section select { width: 80px;  border-radius: 10px; border: 1px solid #e0e0e0; padding: 5px ; }    
+.admin_contents .branch-table-container .branch-table tbody tr td .branch-controls .no-branch { font-weight: 600; color: var(--point-color); }
+.admin_contents .branch-table-container .branch-table tbody tr td .roles-section { margin-top: 4px; display: flex; justify-content: start; align-items: center; gap: 6px; }
+.admin_contents .branch-table-container .branch-table tbody tr td .update-button { cursor: pointer; padding: 5px 10px; border-radius: 10px; background-color: var(--gray-color); color: var(--white-color); }
+.admin_contents .branch-table-container .branch-table tbody tr td .update-button:hover { background-color: var(--black-color); }
+.admin_contents .branch-table-container .branch-table tbody tr:last-child td { border-bottom: none; }
 
 
