--- a/src/main/frontend/src/styles/admin/admin.css
+++ b/src/main/frontend/src/styles/admin/admin.css
@@ -101,6 +101,60 @@
 .admin_contents .branch-table-container .action-buttons button { cursor: pointer; padding: 5px 10px; border-radius: 10px; background-color: var(--black-color); color: var(--white-color); }
 .admin_contents .branch-table-container .action-buttons button:hover { background-color: var(--point-color); }
 .admin_contents .add_branch_button { padding: 30px;  display: flex; justify-content: end; align-items: center; gap: 10px; }
-.admin_contents .add_branch_button a { cursor: pointer; padding: 8px 14px; border-radius: 20px; background-color: var(--black-color); color: var(--white-color); }
+.admin_contents .add_branch_button a { cursor: pointer; padding: 8px 14px; font-size: 16px; font-weight: 600; border-radius: 20px; background-color: var(--black-color); color: var(--white-color); }
 .admin_contents .add_branch_button a:hover { background-color: var(--point-color); }
 
+.admin_contents .form-container { margin-top: 20px; padding: 34px; background-color: var(--white-color); border-radius: 20px; }
+.admin_contents .form-container .input-table { width: 100%; }
+.admin_contents .form-container .input-table th { width: 150px; padding: 12px 5px; vertical-align: middle; font-size: 14px; font-weight: 600; color: var(--black-color); text-align: left; }
+.admin_contents .form-container .input-table td { padding: 12px 5px; vertical-align: middle; font-size: 14px; font-weight: 400; color: var(--black-color); text-align: left; }
+.admin_contents .form-container .input-table td input { width: 100%; border-radius: 10px; border: 1px solid #e0e0e0; padding: 10px; }
+.admin_contents .form-container .input-table td textarea { width: 100%; border-radius: 10px; border: 1px solid #e0e0e0; padding: 10px; }
+.admin_contents .form-container .input-table td select { width: 100%; border-radius: 10px; border: 1px solid #e0e0e0; padding: 10px; }
+.admin_contents .form-container .input-table td button { cursor: pointer; padding: 5px 10px; border-radius: 10px; background-color: var(--black-color); color: var(--white-color); }
+.admin_contents .form-container .input-table td.addr_input { position: relative; }
+.admin_contents .form-container .input-table td.addr_input .address-search-button { position: absolute; right: 10px; top: 20px; }
+.admin_contents .form-container .input-table td .input-help-text { margin-top: 10px; font-size: 12px; font-weight: 400; color: var(--point-color); }
+
+.admin_contents .form-container .image-info-section { margin: 10px; display: flex; justify-content: start; align-items: center; gap: 10px; }
+.admin_contents .form-container .image-info-section .image-upload-button { cursor: pointer; padding: 5px 10px; border-radius: 10px; background-color: var(--black-color); color: var(--white-color); }
+.admin_contents .form-container .image-info-section .image-upload-button:hover { background-color: var(--point-color); }
+.admin_contents .form-container .image-info-section .image-upload-button:disabled { background-color: var(--gray-color); color: var(--white-color); }
+.admin_contents .form-container .image-info-section .image-upload-button:disabled:hover { background-color: var(--gray-color); color: var(--white-color); }
+.admin_contents .form-container .image-info-section .image-upload-button:disabled:hover { background-color: var(--gray-color); color: var(--white-color); }
+
+.admin_contents .form-container .image-management-section { margin-top: 20px; }
+.admin_contents .form-container .image-management-section h4 { font-size: 18px; font-weight: 600; color: var(--black-color); }
+.admin_contents .form-container .image-management-section h5 { font-size: 16px; font-weight: 600; color: var(--black-color); }
+.admin_contents .form-container .image-management-section .image-preview-container { margin-top: 10px; display: flex; justify-content: start; align-items: center; gap: 10px; }
+.admin_contents .form-container .image-management-section .image-preview-container .image-preview { width: 100px; height: 100px; border-radius: 10px; border: 1px solid #e0e0e0; }
+.admin_contents .form-container .image-management-section .image-preview-container .image-preview img { width: 100%; height: 100%; object-fit: cover; }
+.admin_contents .form-container .image-management-section .image-preview-container .image-preview .image-tag { font-size: 12px; font-weight: 400; color: var(--white-color); background-color: var(--black-color); padding: 5px 10px; border-radius: 10px; }
+.admin_contents .form-container .form-buttons { margin-top: 20px; display: flex; justify-content: end; align-items: center; gap: 10px; }
+.admin_contents .form-container .form-buttons button { cursor: pointer; padding: 8px 14px; border-radius: 20px; background-color: var(--black-color); color: var(--white-color); font-size: 16px; font-weight: 600; }
+.admin_contents .form-container .form-buttons button:hover { background-color: var(--point-color); }
+.admin_contents .form-container .form-buttons button:disabled { background-color: var(--gray-color); color: var(--white-color); }
+.admin_contents .form-container .form-buttons button:disabled:hover { background-color: var(--gray-color); color: var(--white-color); }
+.admin_contents .form-container .form-buttons button.cancel-button { background-color: var(--gray-color); color: var(--black-color); }
+.admin_contents .form-container .form-buttons button.cancel-button:hover { background-color: var(--black-color); color: var(--white-color); }
+.admin_contents .form-container .form-buttons button.cancel-button:disabled { background-color: var(--gray-color); color: var(--white-color); }
+.admin_contents .form-container .form-buttons button.cancel-button:disabled:hover { background-color: var(--gray-color); color: var(--white-color); }
+
+.admin_contents .form-container .region-check-container { display: flex; justify-content: start; align-items: center; gap: 10px; }
+.admin_contents .form-container .region-check-container .region-check-button { cursor: pointer; padding: 5px 10px; border-radius: 10px; background-color: var(--black-color); color: var(--white-color); }
+.admin_contents .form-container .region-check-container .region-check-button:hover { background-color: var(--point-color); }
+.admin_contents .form-container .region-check-container .region-check-button:disabled { background-color: var(--gray-color); color: var(--white-color); }
+.admin_contents .form-container .region-check-container .region-check-button:disabled:hover { background-color: var(--gray-color); color: var(--white-color); }
+.admin_contents .form-container .region-check-container .region-check-button:disabled:hover { background-color: var(--gray-color); color: var(--white-color); }
+
+.admin_contents .form-container .region-check-message { margin-top: 10px; font-size: 12px; font-weight: 400; color: var(--point-color); }
+.admin_contents .form-container .image-upload-button { margin-top:10px; cursor: pointer; padding: 5px 10px; border-radius: 10px; background-color: var(--black-color); color: var(--white-color); }
+.admin_contents .form-container .image-upload-button:hover { background-color: var(--point-color); }
+.admin_contents .form-container .image-upload-button:disabled { background-color: var(--gray-color); color: var(--white-color); }
+.admin_contents .form-container .image-upload-button:disabled:hover { background-color: var(--gray-color); color: var(--white-color); }
+.admin_contents .form-container .image-upload-button:disabled:hover { background-color: var(--gray-color); color: var(--white-color); }
+
+.admin_contents .form-container .image-preview-container { margin-top: 10px; display: flex; justify-content: start; align-items: center; gap: 10px; }
+.admin_contents .form-container .image-preview-container .image-preview { width: 100px; height: 100px; border-radius: 10px; border: 1px solid #e0e0e0; }
+.admin_contents .form-container .image-preview-container .image-preview img { width: 100%; height: 100%; object-fit: cover; }
+.admin_contents .form-container .image-preview-container .image-preview .image-tag { font-size: 12px; font-weight: 400; color: var(--white-color); background-color: var(--black-color); padding: 5px 10px; border-radius: 10px; }
