--- a/src/main/frontend/src/styles/navbar.css
+++ b/src/main/frontend/src/styles/navbar.css
@@ -120,17 +120,36 @@ nav.main_nav .logo img {
 }
 
 .admin_btn {
-    background-color: var(--black-color); /* 진한 그레이 */
-    color: var(--white-color);
-    border: none;
-    padding: 8px 14px;
-    border-radius: 15px;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    background-color: var(--black-color) !important;
+    color: var(--white-color) !important;
+    border: none !important;
+    padding: 8px 14px !important;
+    border-radius: 15px !important;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 14px !important;
+    transition: all 0.3s ease;
 }
 
 .admin_btn:hover {
-    background-color: #111827;
+    background-color: var(--point-color) !important;
+    padding: 8px 14px !important;
+}
+
+.admin_btn:active {
+    background-color: var(--black-color) !important;
+    padding: 8px 14px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+}
+
+.admin_btn:focus {
+    outline: none !important;
+    box-shadow: none !important;
+    padding: 8px 14px !important;
 }
 
 
