--- a/src/main/frontend/src/styles/admin/admin.css
+++ b/src/main/frontend/src/styles/admin/admin.css
@@ -131,7 +131,7 @@
 .admin_contents .form-container .image-management-section .image-preview-container .image-preview img { width: 100%; height: 100%; object-fit: cover; }
 .admin_contents .form-container .image-management-section .image-preview-container .image-preview .image-tag { font-size: 12px; font-weight: 400; color: var(--white-color); background-color: var(--black-color); padding: 5px 10px; border-radius: 10px; }
 .admin_contents .form-container .form-buttons { margin-top: 20px; display: flex; justify-content: end; align-items: center; gap: 10px; }
-.admin_contents .form-container .form-buttons button { cursor: pointer; padding: 8px 14px; border-radius: 20px; background-color: var(--black-color); color: var(--white-color); font-size: 16px; font-weight: 600; }
+.admin_contents .form-container .form-buttons button { width: auto; cursor: pointer; padding: 8px 14px; border-radius: 20px; background-color: var(--black-color); color: var(--white-color); font-size: 16px; font-weight: 600; }
 .admin_contents .form-container .form-buttons button:hover { background-color: var(--point-color); }
 .admin_contents .form-container .form-buttons button:disabled { background-color: var(--gray-color); color: var(--white-color); }
 .admin_contents .form-container .form-buttons button:disabled:hover { background-color: var(--gray-color); color: var(--white-color); }
@@ -172,4 +172,11 @@
 .admin_contents .posts-table-container .posts-table tbody tr td .delete-button { cursor: pointer; background-color: var(--gray-color); color: var(--black-color); padding: 5px 10px; border-radius: 20px; }
 .admin_contents .posts-table-container .posts-table tbody tr td .delete-button:hover { background-color: var(--black-color); color: var(--white-color); }
 .admin_contents .posts-table-container .posts-table tbody tr:last-child td { border-bottom: none; }
+.admin_contents .posts-table-container .posts-table tbody tr td button~button { margin-left: 6px; }
+
+.admin_main .admin_contents .create-form .image-button-group  { margin-top: 10px; display: flex; justify-content: start; align-items: center; gap: 10px; }
+.admin_main .admin_contents .create-form .image-button-group button { margin: 0;}
+.admin_main .admin_contents .create-form .file-info {margin-top: 10px; font-size: 12px; font-weight: 400; color: var(--point-color);  }    
+
+
 
